' Generated by UML Generator
' Encoded: lPR1IyCm5CRl_Ijod1IAPm-oCHa8YeU95_7mbgPRi4qbIGMTysytJRScRPDeA-oqBUltVR_7UozqBYHmMHLv95ufUmCE1S8v2B6GajDD9SajBjcQVX9q6UreIX2c7ESaYYYJX6U02LhkW7AqZn3wte6u8rinkxX2xoLDwoD1vGDh3mwsS5rcqEWAK6SKSblOz-f8bsMMaKVOv6IKWIuDFL4iI_KqC-Jna3mUaFVKBRvBF01of7ThY1qrnDuQxikKy6a5DDA9zCVS_w0lkBmXkEIJu4_YYVXjzhG2p00kDa9om79LSKPbnSaAwhP-DEE8EL66ki1Qhh-OyvgzFgu_hQTR92rfVpacnnaQUq9ZPsZyrz2cuUTCFFNed9dkhBsw7IN51rG0PJFWMw6SrRt8jiylrbJqxfCa-Re-SdNl2ls79dFT0OtCiDaRRbbQssly1blPD-lkd6NNsITZwDYJWQLl0vAaDGyzqkG4JKoOV_Grbiycg1iqoO_vYqs_QICXlQ9kp_ru8OFX38oa2yZwGnJeSz34CCu9IzNRo0y
' URL: http://www.plantuml.com/plantuml/uml/lPR1IyCm5CRl_Ijod1IAPm-oCHa8YeU95_7mbgPRi4qbIGMTysytJRScRPDeA-oqBUltVR_7UozqBYHmMHLv95ufUmCE1S8v2B6GajDD9SajBjcQVX9q6UreIX2c7ESaYYYJX6U02LhkW7AqZn3wte6u8rinkxX2xoLDwoD1vGDh3mwsS5rcqEWAK6SKSblOz-f8bsMMaKVOv6IKWIuDFL4iI_KqC-Jna3mUaFVKBRvBF01of7ThY1qrnDuQxikKy6a5DDA9zCVS_w0lkBmXkEIJu4_YYVXjzhG2p00kDa9om79LSKPbnSaAwhP-DEE8EL66ki1Qhh-OyvgzFgu_hQTR92rfVpacnnaQUq9ZPsZyrz2cuUTCFFNed9dkhBsw7IN51rG0PJFWMw6SrRt8jiylrbJqxfCa-Re-SdNl2ls79dFT0OtCiDaRRbbQssly1blPD-lkd6NNsITZwDYJWQLl0vAaDGyzqkG4JKoOV_Grbiycg1iqoO_vYqs_QICXlQ9kp_ru8OFX38oa2yZwGnJeSz34CCu9IzNRo0y
' Generated on: 2025-11-17T16:59:35.467019142

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Chair {
  ~hasLegs(): void
  ~sitOn(): void
}

interface Sofa {
  ~material(): void
  ~hasLegs(): void
}

interface CoffeTable {
  ~material(): void
  ~hasLegs(): void
}

class VictorianChair {
  +hasLegs(): void
  +sitOn(): void
}

class VictorianSofa {
  +hasLegs(): void
  +material(): void
}

class VictorianCoffeTable {
  +material(): void
  +hasLegs(): void
}

class ModernChair {
  +hasLegs(): void
  +sitOn(): void
}

class ModernSofa {
  +hasLegs(): void
  +material(): void
}

class ModernCoffeTable {
  +material(): void
  +hasLegs(): void
}

class ArtDecorChair {
  +hasLegs(): void
  +sitOn(): void
}

class ArtDecorSofa {
  +hasLegs(): void
  +material(): void
}

class ArtDecorCoffeTable {
  +material(): void
  +hasLegs(): void
}

interface AbstractFurnitureFactory {
  ~createChair(): Chair
  ~createSofa(): Sofa
  ~createCoffeTable(): CoffeTable
}

class VictorianFurnitureFactory {
  +createChair(): Chair
  +createSofa(): Sofa
  +createCoffeTable(): CoffeTable
}

class ModernFurnitureFactory {
  +createChair(): Chair
  +createSofa(): Sofa
  +createCoffeTable(): CoffeTable
}

class ArtDecorFurnitureFactory {
  +createChair(): Chair
  +createSofa(): Sofa
  +createCoffeTable(): CoffeTable
}

class FurnitureFactory {
  +{static} main(args: String[]): void
}

VictorianChair ..|> Chair
VictorianSofa ..|> Sofa
VictorianCoffeTable ..|> CoffeTable
ModernChair ..|> Chair
ModernSofa ..|> Sofa
ModernCoffeTable ..|> CoffeTable
ArtDecorChair ..|> Chair
ArtDecorSofa ..|> Sofa
ArtDecorCoffeTable ..|> CoffeTable
AbstractFurnitureFactory ..> Chair
AbstractFurnitureFactory ..> Sofa
AbstractFurnitureFactory ..> CoffeTable
VictorianFurnitureFactory ..|> AbstractFurnitureFactory
VictorianFurnitureFactory ..> Chair
VictorianFurnitureFactory ..> Sofa
VictorianFurnitureFactory ..> CoffeTable
ModernFurnitureFactory ..|> AbstractFurnitureFactory
ModernFurnitureFactory ..> Chair
ModernFurnitureFactory ..> Sofa
ModernFurnitureFactory ..> CoffeTable
ArtDecorFurnitureFactory ..|> AbstractFurnitureFactory
ArtDecorFurnitureFactory ..> Chair
ArtDecorFurnitureFactory ..> Sofa
ArtDecorFurnitureFactory ..> CoffeTable
@enduml